--- a/src/content/articles/featured-issues.mdx
+++ b/src/content/articles/featured-issues.mdx
@@ -16,7 +16,7 @@ export const components = {
 
 export const reCard = await getEntry(
     "cards",
-    "reverse-engineering",
+    "ethical-hacking",
 );
 
 export const networkCard = await getEntry(
@@ -33,12 +33,12 @@ export const networkCard = await getEntry(
   <CardHolo markdown={reCard} />
 </Container>
 
-<More>
+{/* <More>
 
 <Container>
   <Card markdown={reCard} />
   <Card markdown={reCard} />
 </Container>
-</More>
+</More> */}
 
-These two cards use the same file for content. They simply have a different wrapper. A wrapper which has total control of how the elements are rendered, because of the power of MDX.
+Featured issues, are just the issues currently receiving the most updates. Please check out the rest of our issues 
