--- a/src/content/cards/ethical-hacking.mdx
+++ b/src/content/cards/ethical-hacking.mdx
@@ -1,8 +1,8 @@
 ---
-name: Ethical Hacking
+name: The Clean Room
 tagline: Ethical Hacking & Reverse Engineering
 art: https://images.unsplash.com/photo-1618060932014-4deda4932554?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-mark: Fun
+mark: Lab
 type: blog
 ---
 
@@ -11,7 +11,7 @@ import { getEntry } from "astro:content";
 import MarkdownSnippet from "../../components/ArticleTeaser.astro";
 export const detailsMD = await getEntry(
   "articles",
-  "details-re-engineering",
+  "details-ethical-hacking",
 );
 
 <Card>
@@ -33,7 +33,7 @@ export const detailsMD = await getEntry(
     <p>Ethical Hacking</p>
       <BoxList>
         * Malware
-        * Network Attacks
+        * Network Traffic
         * Reverse Engineering
       </BoxList>
     </Box>
@@ -43,31 +43,23 @@ export const detailsMD = await getEntry(
   </ArtSection>
 
   <Body>
-    This issue is all about Ethical Hacking. Tutorials/Guides for CTF Challenges, Crackme's, etc.
-     We will also be building our own tools along the way.
+    Hands-on **ethical hacking** and **reverse engineering**. Tools, methods, and small projects in a safe lab.
   </Body>
 
+
   <Tip>
-    You are responsible for your own actions
+    Lab-only. Don’t touch systems you don’t own.
   </Tip>
 
-  <Button href="/cards/reverse-engineering">Read More</Button>
+  <Button href="/cards/ethical-hacking">Read More</Button>
 </Card>
 
 <More>
-  # Overview & Planning
-
-  Before we start here is a little write up on how I planned for this project, and what data I have gathered. 
-
   <div class="border p-6">
     <MarkdownSnippet
       markdown={detailsMD}
-      href={`/issues/reverse-engineering`}
+      href={`/issues/ethical-hacking`}
       cta="Read More"
     />
   </div>
-
-  There are a few tags that are important to the Technonomicon, and `More` might be the most important of all.
-
-  The contents of a `More` tag can be discarded, by rendering `More` as `Empty`
 </More>
