--- a/src/content/cards/ethical-hacking.mdx
+++ b/src/content/cards/ethical-hacking.mdx
@@ -3,7 +3,9 @@ name: The Clean Room
 tagline: Ethical Hacking & Reverse Engineering
 art: https://images.unsplash.com/photo-1618060932014-4deda4932554?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 mark: Lab
-type: blog
+type: holo            # "holo" to render with CardHolo; use "tip" or omit for normal Card
+featured: false        # <-- makes it appear in Featured Issues
+priority: 99          # <-- optional: higher shows earlier (if you sort by priority)
 ---
 
 import { getEntry } from "astro:content";
