small config fix

--- a/src/content/cards/network-engineering.mdx
+++ b/src/content/cards/network-engineering.mdx
@@ -1,5 +1,6 @@
 ---
 name: Network Engineering
+title: Network Engineering Card
 tagline: Learn the network by building the tools.
 art: https://images.unsplash.com/photo-1667984390553-7f439e6ae401?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 mark: Lab
