--- a/src/content/articles/featured-issues-sidebar.mdx
+++ b/src/content/articles/featured-issues-sidebar.mdx
@@ -9,24 +9,26 @@ issue_number: 1
 
 **{frontmatter.description}**
 
-<p>This blog is themed to feel like a virtual magazine series. I will be organizing my posts into **Issues** and **Articles** q</p>
-<p>You’re on **Issue {frontmatter.issue_number}**, this page serves as a sort of catalog for issues that are new or receiving new releases. </p>
+This blog feels like a digital magazine. Every topic lives in an **issue**. Inside each issue you will
+find articles, lab notes, and cards with quick summaries.
 
 ## How to navigate
 
-* In the header: **All Issues** for the full catalog  
-* Inside any issue: open an article and start. Most list prerequisites, time, and difficulty up top.
+* Use the **All Issues** link in the header for the full catalog.
+* Issue pages list the active articles plus the roadmap.
+* Cards highlight what each issue teaches and link straight to the details.
 
 <More>
-## What to expect
+## Reading suggestions
 
-Clear, reproducible work across ethical hacking, reverse engineering, network engineering, emulation, and developer tooling. Quick hits when you want them, deep dives when you’re ready.
+* **Automation Playbook** if you want developer tooling workflows.
+* **Frontend Observability** to instrument and monitor the UI.
+* **The Clean Room** to practice ethical hacking inside a safe sandbox.
 
-## What’s an issue?
+## Tips
 
-An **Issue** is a focused bundle around one topic. Active issues get new articles over time, so they’re worth revisiting.
+* Bookmark the issues you follow. New articles appear directly on those pages.
+* Each article includes prerequisites, estimated time, and artifacts to save.
 
-## Stay in the loop
-
-Check back for new releases, continue a series inside an active issue, or dig through the archive when you want something different. If an article helps, share it.
+Grab a coffee, pick an issue, and explore.
 </More>
