--- a/src/content/articles/featured-issues.mdx
+++ b/src/content/articles/featured-issues.mdx
@@ -1,6 +1,6 @@
 ---
 title: Featured Issues
-description: What’s active right now.
+description: Automation, observability, and ethical hacking are shipping now.
 issue_number: 1
 ---
 
@@ -77,5 +77,6 @@ export const pickCard = (entry) => {
     </p>
   </More>
 </UI.Section>
+
 
 
