--- a/src/content/articles/featured-network-engineering.mdx
+++ b/src/content/articles/featured-network-engineering.mdx
@@ -1,36 +1,45 @@
 ---
-title: Featured Articles.
-description: Hand-picked tutorials & guides.
+title: Featured Network Engineering Labs
+description: Hand-picked labs that turn packets into understanding.
+layout: ../../layouts/Article.astro
 issue_number: 2
 ---
 
+import FancyParagraph from "../../components/Content/FancyParagraph.astro";
+import ArticleTeaser from "../../components/ArticleTeaser.astro";
 import { getEntry } from "astro:content";
-import Card from "../../components/Cards/NormalCard/Card.astro";
-import CardHolo from "../../components/Cards/HoloFullArtCard/Card.astro";
-import TipCard from "../../components/Cards/TipCard/Card.astro";
 
-export const components = {
-  Container: props => <div class="flex flex-row-reverse justify-center w-full my-12 flex-wrap lg:flex-nowrap gap-2" {...props} />,
-  HoloText: props => <p class="text-center holographic-text font-display mt-4 text-xl lg:text-4xl" {...props} />
-};
-
-export const reCard = await getEntry(
-  "cards",
-  "why-mdx-cards",
-);
+export const details = await getEntry("articles", "details-network-engineering");
 
 # {frontmatter.title}
 
-<HoloText>{frontmatter.description}</HoloText>
+<FancyParagraph>
+The Packet Bench issue is always expanding, but a few labs keep coming up in workshops. This article
+rounds up the ones I recommend when you want to get hands on fast.
+</FancyParagraph>
 
-<Container>
-  <Card markdown={reCard} />
-  <CardHolo markdown={reCard} />
-</Container>
+## Packet sniffer starter lab
 
-<Container>
-  <Card markdown={reCard} />
-  <Card markdown={reCard} />
-</Container>
+Build a `pcap` reader that prints Ethernet, IP, and TCP headers. The exercise explains buffer layouts and shows how filters work under the hood.
 
-These two cards use the same file for content. They simply have a different wrapper. A wrapper which has total control of how the elements are rendered, because of the power of MDX.
+## ICMP explorer
+
+Craft echo requests manually, capture the responses, and measure round trip times. The lab teaches how TTL works and why traceroute is possible.
+
+## Stealth port scan
+
+Implement a slow SYN scanner that logs banners without triggering every IDS. We cover pacing strategies and how to validate the results with captures.
+
+## Why these matter
+
+* They teach fundamentals that unlock the rest of the issue.
+* Each comes with captures so you can compare your output.
+* They scale: start with the basics, then extend with new protocols.
+
+<More>
+  <ArticleTeaser
+    markdown={details}
+    href={`/articles/${details.slug}`}
+    cta="Read the issue overview"
+  />
+</More>
