working theme picker

--- a/src/content/cards/editorial-charter.mdx
+++ b/src/content/cards/editorial-charter.mdx
@@ -1,10 +1,10 @@
 ---
-name: Technonomicon
-tagline: A manifesto for this virtual magazine.
+name: Editorial Charter
+tagline: How this magazine works.
 art: https://images.unsplash.com/photo-1521572267360-ee0c2909d518?q=80&w=2070&auto=format&fit=crop
 mark: Editorial
 featured: false
-card_path: /cards/technonomicon
+card_path: /cards/editorial-charter
 issue_path: /issues/featured
 ---
 
