--- a/src/content/articles/why-should-i-use-this.mdx
+++ b/src/content/articles/why-should-i-use-this.mdx
@@ -1,26 +1,27 @@
 ---
-title: The Technonomicon is an Astro Theme meant for writing.
-description: Introducing the technonomicon.
+title: The Bernie.Dev Editorial Charter.
+description: Introducing the editorial charter for this publication.
 layout: ../../layouts/Article.astro
 issue_number: 1
 ---
 
 import { getEntry } from "astro:content";
-import Card from "../../components/Cards/NormalCard/Card.astro"
-import CardHolo from "../../components/Cards/HoloFullArtCard/Card.astro"
-export const technonomicon = await getEntry(
+import Card from "../../components/Cards/NormalCard/Card.astro";
+import CardHolo from "../../components/Cards/HoloFullArtCard/Card.astro";
+
+export const editorialCharter = await getEntry(
   "cards",
-  "technonomicon",
+  "editorial-charter",
 );
 
 # {frontmatter.title}
 
-## Portable Content like never before.
+## Portable content like never before
 
 These two cards use the same file for content. They simply have a different wrapper, which because of the power of MDX has total control of how the elements are rendered.
 
 <div class="flex gap-2 flex-wrap [perspective:900px] overflow-visible">
-  <Card markdown={technonomicon} />
+  <Card markdown={editorialCharter} />
 
-  <CardHolo markdown={technonomicon} />
+  <CardHolo markdown={editorialCharter} />
 </div>
